--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "formik": "^2.2.9",
+    "material-paper": "^0.0.8",
+    "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
@@ -26,7 +29,10 @@
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
-    "web-vitals": "^2.1.3"
+    "shortid": "^2.2.16",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
